--- a/docs/source/tutorial/quick-start.ipynb
+++ b/docs/source/tutorial/quick-start.ipynb
@@ -19,14 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:44.151185Z",
      "start_time": "2020-07-05T21:59:43.333889Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/mambaforge/base/envs/supy/lib/python3.9/site-packages/pandas/core/reshape/merge.py:916: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
+      "  key_col = Index(lvals).where(~mask_left, rvals)\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import supy as sp\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:45.545172Z",
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:45.583917Z",
@@ -100,14 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:47.374729Z",
      "start_time": "2020-07-05T21:59:45.585575Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-20 23:04:30,116 - SuPy - INFO - All cache cleared.\n"
+     ]
+    }
+   ],
    "source": [
     "df_state_init = sp.init_supy(path_runcontrol)"
    ]
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:47.416286Z",
@@ -241,7 +258,7 @@
        "waterusemethod              0        0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,14 +276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:50.069301Z",
      "start_time": "2020-07-05T21:59:47.417990Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-20 23:04:30,731 - SuPy - INFO - All cache cleared.\n"
+     ]
+    }
+   ],
    "source": [
     "grid = df_state_init.index[0]\n",
     "df_forcing = sp.load_forcing_grid(path_runcontrol, grid)\n",
@@ -291,14 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:52.924662Z",
      "start_time": "2020-07-05T21:59:50.072293Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-20 23:04:34,398 - SuPy - INFO - All cache cleared.\n"
+     ]
+    }
+   ],
    "source": [
     "df_state_init, df_forcing = sp.load_SampleData()\n",
     "grid = df_state_init.index[0]\n",
@@ -344,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:52.965867Z",
@@ -413,7 +446,7 @@
        "1        22.0     13.1     13.1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:53.009389Z",
@@ -503,7 +536,7 @@
        "1           0.43  0.38  0.0  0.02  0.03  0.0  0.14"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.443345Z",
@@ -623,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.492019Z",
@@ -693,7 +726,7 @@
        "1        0.43  0.38   0.0  0.02  0.03   0.0  0.14"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.533621Z",
@@ -745,7 +778,7 @@
        "Name: 2012-01-01 00:10:00, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.576315Z",
@@ -772,7 +805,7 @@
        "4.78"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.622433Z",
@@ -872,7 +905,7 @@
        "1         0.1   0.1   0.2   0.3  0.25  0.05     0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.589237Z",
@@ -912,15 +945,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-09-20 23:01:15,236 - SuPy - INFO - ====================\n",
-      "2022-09-20 23:01:15,237 - SuPy - INFO - Simulation period:\n",
-      "2022-09-20 23:01:15,237 - SuPy - INFO -   Start: 2012-01-01 00:05:00\n",
-      "2022-09-20 23:01:15,238 - SuPy - INFO -   End: 2012-12-31 23:55:00\n",
-      "2022-09-20 23:01:15,238 - SuPy - INFO - \n",
-      "2022-09-20 23:01:15,239 - SuPy - INFO - No. of grids: 1\n",
-      "2022-09-20 23:01:15,239 - SuPy - INFO - SuPy is running in serial mode\n",
-      "2022-09-20 23:01:25,668 - SuPy - INFO - Execution time: 10.4 s\n",
-      "2022-09-20 23:01:25,668 - SuPy - INFO - ====================\n",
+      "2022-09-20 23:04:39,021 - SuPy - INFO - ====================\n",
+      "2022-09-20 23:04:39,021 - SuPy - INFO - Simulation period:\n",
+      "2022-09-20 23:04:39,022 - SuPy - INFO -   Start: 2012-01-01 00:05:00\n",
+      "2022-09-20 23:04:39,022 - SuPy - INFO -   End: 2012-12-31 23:55:00\n",
+      "2022-09-20 23:04:39,023 - SuPy - INFO - \n",
+      "2022-09-20 23:04:39,023 - SuPy - INFO - No. of grids: 1\n",
+      "2022-09-20 23:04:39,024 - SuPy - INFO - SuPy is running in serial mode\n",
+      "2022-09-20 23:04:49,343 - SuPy - INFO - Execution time: 10.3 s\n",
+      "2022-09-20 23:04:49,344 - SuPy - INFO - ====================\n",
       "\n"
      ]
     }
@@ -946,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.633170Z",
@@ -962,7 +995,7 @@
        "      dtype='object', name='group')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.685837Z",
@@ -1084,7 +1117,7 @@
        "ah_slope_heating (0,)                    2.7                 2.7"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.744639Z",
@@ -1392,7 +1425,7 @@
        "[5 rows x 924 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.783629Z",
@@ -1435,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.855675Z",
@@ -1562,7 +1595,7 @@
        "max       160.023207  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.895462Z",
@@ -1626,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:16.647173Z",
@@ -1667,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:22.916483Z",
@@ -1713,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:23.025489Z",
@@ -1738,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:23.486840Z",
@@ -1778,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:23.855977Z",
@@ -1811,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:24.205183Z",
@@ -1851,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:24.357219Z",
@@ -1872,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:24.928216Z",
@@ -1886,7 +1919,7 @@
        "<AxesSubplot:title={'center':'Surface Energy Balance'}, xlabel='Month'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1896,7 +1929,7 @@
        "<AxesSubplot:title={'center':'Surface Water Balance'}, xlabel='Month'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1957,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:25.004764Z",
@@ -2411,7 +2444,7 @@
        "[105407 rows x 924 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2422,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:02:35.665286Z",
@@ -2436,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:29.946829Z",
